<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@drawable/background_obatin_id_activity"
                tools:context=".controller.pages.ActivityObtainId">

    <TextView
            android:text="Obtén Id"
            android:layout_width="wrap_content"
            android:fontFamily="@font/krub"
            android:layout_alignParentTop="true"
            android:layout_marginTop="138dp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"/>

    <EditText
            android:inputType="text"
            android:hint="@string/inputName"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:id="@+id/obtain_input_name"
            android:background="#fff"
            android:textSize="18sp"
            android:fontFamily="@font/krub"
            android:textColor="#707070"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="219dp"/>

    <EditText
            android:inputType="text"
            android:hint="@string/inputLastName"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:id="@+id/obtain_input_lastName"
            android:background="#fff"
            android:textSize="18sp"
            android:fontFamily="@font/krub"
            android:textColor="#707070"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="274dp"/>


    <EditText
            android:inputType="text"
            android:hint="@string/inputCountry"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:id="@+id/obtain_input_country"
            android:background="#fff"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="197dp"
            android:textSize="18sp"
            android:fontFamily="@font/krub"
            android:textColor="#707070"
            android:layout_centerHorizontal="true"/>

    <EditText
            android:hint="@string/inputAge"
            android:inputType="text"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:id="@+id/obtain_input_age"
            android:background="#fff"
            android:textSize="18sp"
            android:fontFamily="@font/krub"
            android:textColor="#707070"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="249dp"/>

    <Button
            android:text="Obtener"
            android:layout_width="147sp"
            android:layout_height="47sp"
            android:id="@+id/obtain_btn_obtain_id"
            android:background="#F433AB"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="@font/krub"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="126dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/obtain_btntext_return"
            android:textColor="#fff"
            android:fontFamily="@font/krub"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:text="Regresar"
            android:layout_below="@+id/obtain_btn_obtain_id"
            android:layout_marginTop="-121dp"/>

</RelativeLayout>